# advent-of-code

./: .env.template  .eslintrc.js  .gitignore  .prettierignore  .prettierrc.json  Cargo.toml  README.md  index.ts  package.json  run-go.sh  tsconfig.json
res/2015/: 5.test.txt
src/: go.mod  index.ts  main.go  main.rs  y2021.rs  y2022.rs
src/util/: go.mod  index.ts  mod.rs  util.go
src/y2015/: day1.go  day2.go  day3.go  day4.go  day5.go  day6.go  go.mod  main.go
src/y2021/: day1.rs  day1.ts  day13.ts  day2.rs  day2.ts  day3.rs  day3.ts  day4.ts  day5.ts  day6.ts  day7.ts  day8.ts  day9.ts  index.ts  mod.rs
src/y2022/: day1.rs  day10.rs  day11.rs  day12.rs  day13.rs  day13.ts  day2.rs  day3.rs  day4.rs  day5.rs  day5.rs.old  day6.ts  day7.rs  day7.ts  day8.ts  day9.rs  index.ts  mod.rs
src/y2023/: day1.rs  day2.rs  day4.rs  day6.rs  index.ts  mod.rs
