[package]
name = "advent-of-code"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.12", features = ["blocking"] }
futures = "0.3"
colored = "2.0.0"
tokio = { version = "1.22", features = ["full"] }
dotenv = "0.15.0"
